# aria-lang

./: .dockerignore  .gitattributes  .gitignore  API_REFERENCE.md  ARRAY_IMPLEMENTATION_SESSION.md  ARRAY_PROGRESS.md  BOOL_TEST_STATUS.md  BUILD_COMMAND_IMPLEMENTATION.md  CODE_QUALITY_REPORT.md  COMPETITIVE_ANALYSIS_2026.md  COMPILER_COMPLETION_SUMMARY.md  CONTINUATION_GUIDE.md  CREATE_PRS.sh  CROSS_MODULE_TYPE_CHECKING.md  Cargo.toml  DAY3_IMPLEMENTATION_PLAN.md  DAY3_PROGRESS.md  DAY4_PROGRESS.md  DAY5_PROGRESS.md  DAY6_PROGRESS.md  DAY7_PROGRESS.md  Dockerfile  ECOSYSTEM.md  ECOSYSTEM_SETUP_COMPLETE.md  ERROR_MESSAGE_IMPROVEMENTS.md  EXAMPLE_PROJECTS_RESEARCH.md  FINAL_SESSION_HANDOFF.md  FINAL_SESSION_SUMMARY.md  FIXES_SUMMARY.md  FLUKEBASE_DOGFOODING.md  GENERICS_DESIGN.md  GENERICS_IMPLEMENTATION_PROGRESS.md  GENERICS_SESSION_SUMMARY.md  GRAMMAR.md  MIR_LOWERING_IMPROVEMENTS.md  MODULE_SYSTEM_SUMMARY.md  OPPORTUNITIES_ANALYSIS.md  PARALLEL_WORKFLOW_COMPLETE_SUMMARY.md  PARSER_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATIONS.md  (+19 more)
.github/: pull_request_template_day3.md
benches/: Cargo.toml  lib.rs  optimization_benchmarks.rs
benches/benches/: compiler_benchmarks.rs  runtime_benchmarks.rs  typechecker_benchmarks.rs
benches/fixtures/: large.aria  medium.aria  small.aria
crates/aria-ast/: Cargo.toml
crates/aria-ast/src/: lib.rs
crates/aria-channel/: Cargo.toml
crates/aria-channel/src/: lib.rs  select.rs
crates/aria-codegen/: Cargo.toml
crates/aria-codegen/src/: cranelift_backend.rs  inline.rs  lib.rs  runtime.rs  types.rs  wasm_backend.rs  wasm_component.rs
crates/aria-compiler/: Cargo.toml
crates/aria-compiler/src/: lib.rs  main.rs
crates/aria-contracts/: Cargo.toml
crates/aria-contracts/src/: lib.rs
crates/aria-diagnostics/: Cargo.toml
crates/aria-diagnostics/src/: lib.rs  render.rs  span.rs  suggestion.rs
crates/aria-effects/: Cargo.toml
crates/aria-effects/src/: lib.rs
crates/aria-ffi/: Cargo.toml
crates/aria-ffi/src/: c_header_parser.rs  c_types.rs  error.rs  lib.rs  ownership.rs  pointer.rs
crates/aria-interpreter/: Cargo.toml
crates/aria-interpreter/src/: builtins.rs  environment.rs  eval.rs  lib.rs  value.rs
crates/aria-interpreter/tests/: integration_tests.rs
crates/aria-lexer/: Cargo.toml
crates/aria-lexer/src/: lib.rs
crates/aria-llm/: Cargo.toml
crates/aria-llm/src/: cache.rs  config.rs  lib.rs  optimizer.rs  provider.rs  request.rs  security.rs  verifier.rs
crates/aria-lsp/: Cargo.toml
crates/aria-lsp/src/: capabilities.rs  completion.rs  definition.rs  diagnostics.rs  lib.rs  state.rs  types.rs
crates/aria-lsp/src/handlers/: completion.rs  definition.rs  document.rs  document_symbol.rs  hover.rs  initialize.rs  mod.rs  shutdown.rs
crates/aria-mir/: Cargo.toml
crates/aria-mir/src/: contract_verifier.rs  lib.rs  lower.rs  lower_expr.rs  lower_pattern.rs  lower_stmt.rs  mir.rs  optimize.rs  pretty.rs
crates/aria-mir/tests/: lowering_integration.rs
crates/aria-modules/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/aria-modules/src/: cache.rs  error.rs  graph.rs  lib.rs  resolver.rs
crates/aria-modules/tests/: integration_test.rs
crates/aria-ownership/: Cargo.toml
crates/aria-ownership/src/: lib.rs
crates/aria-parser/: Cargo.toml
crates/aria-parser/src/: lib.rs
crates/aria-pkg/: Cargo.toml  README.md
crates/aria-pkg/src/: main.rs  manifest.rs  resolver.rs
crates/aria-python/: .gitignore  Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md  SUMMARY.md  pyproject.toml
crates/aria-python-bridge/: Cargo.toml
crates/aria-python-bridge/src/: array_bridge.rs  conversion.rs  error.rs  gil.rs  lib.rs  py_types.rs
crates/aria-python/examples/: basic_usage.py
crates/aria-python/src/: lib.rs
crates/aria-python/tests/: test_interop.rs
crates/aria-runtime/: Cargo.toml  QUICK_REFERENCE.md  README_FFI.md  RUNTIME_IMPLEMENTATION.md
crates/aria-runtime/benches/: concurrency.rs
crates/aria-runtime/c_runtime/: .gitignore  INDEX.md  INTEGRATION.md  Makefile  QUICKSTART.md  README.md  aria_runtime.c  aria_runtime.h  build.sh  test_example.c
crates/aria-runtime/examples/: test_runtime.c
crates/aria-runtime/src/: async_handler.rs  channel.rs  error.rs  executor.rs  ffi.rs  lib.rs  pool.rs  scope.rs  scope_debug.rs  task.rs  timer.rs
crates/aria-runtime/src/runtime_ffi/: array.rs  hashmap.rs  io.rs  memory.rs  mod.rs  panic.rs  string.rs
crates/aria-stdlib/: CHANGELOG.md  Cargo.toml  NATIVE_BUILTINS.md  README.md
crates/aria-stdlib/examples/: usage.rs
crates/aria-stdlib/src/: lib.rs
crates/aria-stdlib/src/std/: collections.aria  env.aria  fmt.aria  fs.aria  io.aria  iter.aria  math.aria  option.aria  prelude.aria  random.aria  result.aria  string.aria  testing.aria  time.aria
crates/aria-test/: Cargo.toml
crates/aria-test/src/: assertions.rs  generator.rs  lib.rs  property.rs  runner.rs
crates/aria-types/: Cargo.toml
crates/aria-types/src/: captures.rs  check_mode.rs  error_diagnostic.rs  errors.rs  inference.rs  lib.rs  narrowing.rs  type_defs.rs  types.rs
crates/aria-types/tests/: async_await.rs  default_params.rs  effect_system.rs  exception_handling.rs  extern_ffi.rs  hindley_milner.rs  pattern_guards.rs  select_expr.rs  string_interpolation.rs  trait_impl.rs  type_alias.rs
crates/aria-wit/: Cargo.toml
crates/aria-wit/src/: lib.rs
examples/bioflow-cpp/: CMakeLists.txt  COMPARISON.md  README.md
examples/bioflow-cpp/benchmark/: bench.cpp
examples/bioflow-cpp/include/bioflow/: alignment.hpp  kmer.hpp  quality.hpp  sequence.hpp  stats.hpp
examples/bioflow-cpp/src/: alignment.cpp  kmer.cpp  main.cpp  quality.cpp  sequence.cpp  stats.cpp
examples/bioflow-cpp/tests/: test_alignment.cpp  test_kmer.cpp  test_sequence.cpp
examples/bioflow-rust/: COMPARISON.md  Cargo.toml  README.md
examples/bioflow-rust/benches/: benchmarks.rs
examples/bioflow-rust/examples/: demo.rs
examples/bioflow-rust/src/: alignment.rs  kmer.rs  lib.rs  main.rs  quality.rs  sequence.rs  stats.rs
examples/bioflow-rust/tests/: alignment_tests.rs  kmer_tests.rs  sequence_tests.rs
(+302 files in other folders)
