[workspace]
resolver = "2"
members = [
    "crates/aria-lexer",
    "crates/aria-ast",
    "crates/aria-parser",
    "crates/aria-types",
    "crates/aria-interpreter",
    "crates/aria-mir",
    "crates/aria-codegen",
    "crates/aria-compiler",
    "crates/aria-contracts",
    "crates/aria-ownership",
    "crates/aria-runtime",
    "crates/aria-channel",
    "crates/aria-effects",
    "crates/aria-ffi",
    "crates/aria-diagnostics",
    "crates/aria-lsp",
    "crates/aria-test",
    "crates/aria-python",
    "crates/aria-pkg",
    "crates/aria-modules",
    "crates/aria-stdlib",
    "crates/aria-patterns",
    "crates/aria-proptest",
    "crates/aria-llm",
    "benches",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aria-lang/aria"
rust-version = "1.75"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
ariadne = "0.4"
logos = "0.14"
chumsky = "0.9"
internment = "0.8"
smol_str = "0.2"
indexmap = "2.0"
rustc-hash = "1.1"
libc = "0.2"
termcolor = "1.4"
unicode-width = "0.1"

# Testing
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["yaml"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
debug = false
