[workspace]
resolver = "2"
members = [
    "core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aria-lang/aria"
rust-version = "1.75"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
ariadne = "0.4"
logos = "0.14"
chumsky = "0.9"
internment = "0.8"
smol_str = "0.2"
indexmap = "2.0"
rustc-hash = "1.1"
libc = "0.2"
termcolor = "1.4"
unicode-width = "0.1"

# Testing
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["yaml"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
debug = false
