[package]
name = "aria-ast"
description = "Abstract Syntax Tree definitions for the Aria programming language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smol_str = { workspace = true }
internment = { workspace = true }
aria-lexer = { path = "../aria-lexer" }

[dev-dependencies]
pretty_assertions = { workspace = true }
