[package]
name = "aria-channel"
description = "Channel-based communication primitives for the Aria programming language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossbeam-channel = "0.5"
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
