[package]
name = "aria-codegen"
version = "0.1.0"
edition = "2021"
description = "Native code generation for the Aria programming language using Cranelift"
authors = ["Aria Team"]

[dependencies]
aria-mir = { path = "../aria-mir" }
aria-lexer = { path = "../aria-lexer" }

# Cranelift code generation
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"

# Data structures
smol_str = "0.2"
rustc-hash = "1.1"

# Error handling
thiserror = "1.0"

# Object file handling
object = { version = "0.36", features = ["write"] }

# Target detection
target-lexicon = "0.12"

[dev-dependencies]
pretty_assertions = "1.4"
