[package]
name = "aria-contracts"
description = "Tiered contract verification system for the Aria programming language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aria-ast = { path = "../aria-ast" }
thiserror = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
