[package]
name = "aria-interpreter"
description = "Tree-walking interpreter for the Aria programming language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aria-ast = { path = "../aria-ast" }
aria-lexer = { path = "../aria-lexer" }
smol_str = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
aria-parser = { path = "../aria-parser" }
pretty_assertions = { workspace = true }
