[package]
name = "aria-llm"
version = "0.1.0"
edition = "2021"
description = "LLM-assisted optimization pipeline for Aria"

[dependencies]
aria-ast = { path = "../aria-ast" }
aria-mir = { path = "../aria-mir" }
smol_str = { version = "0.2", features = ["serde"] }
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
regex = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"
