[package]
name = "aria-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Language Server Protocol implementation for the Aria programming language"

[dependencies]
# LSP framework
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros", "io-std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror.workspace = true

# Logging
tracing = "0.1"

# Utilities
dashmap = "5.5"
ropey = "1.6"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "test-util"] }
pretty_assertions.workspace = true

[features]
default = []
