[package]
name = "aria-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "aria-pkg"
path = "src/main.rs"

[dependencies]
# Aria compiler infrastructure
aria-compiler = { path = "../aria-compiler" }

# CLI and serialization
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Package management
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = { version = "1.0", features = ["serde"] }

# Utilities
thiserror.workspace = true
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
