[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "aria-python"
version = "0.1.0"
description = "Python bindings for the Aria programming language"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["aria", "programming-language", "interpreter", "bindings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/aria-lang/aria"
Repository = "https://github.com/aria-lang/aria"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "aria_python"
